# nnie_transfer_server

./: .gitignore  CMakeLists.txt  README.md
include/: hi_comm_3a.h  hi_comm_isp.h  hi_debug.h  hifb.h  mpi_audio.h
include/network/: NetworkBase.h
include/nnie/: ModelManager.h  mat.h  net.h
src/: main.cpp
src/network/: NetworkBase.cpp  NetworkBaseThreading.cpp
src/nnie/: ModelManager.cpp  mat.cpp  net.cpp
